ISIS-3002: post merge provisioning fix for command replay (Demo)
- also cleaning up some java lang deprecations